--- a/8.1 Homework. Solve ML & Kaggle.ipynb
+++ b/8.1 Homework. Solve ML & Kaggle.ipynb
@@ -20,12 +20,69 @@
       "version": "3.7.4"
     },
     "colab": {
-      "name": "1st homework task.ipynb",
+      "name": "Копия блокнота \"Копия блокнота \"baseline.ipynb\"\"",
       "provenance": [],
       "collapsed_sections": []
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TK7oX5qdEEYr"
+      },
+      "source": [
+        "<p style=\"align: center;\"><img align=center src=\"https://s8.hostingkartinok.com/uploads/images/2018/08/308b49fcfbc619d629fe4604bceb67ac.jpg\" width=500 height=450/></p>\n",
+        "\n",
+        "<h3 style=\"text-align: center;\"><b>Школа глубокого обучения ФПМИ МФТИ</b></h3>\n",
+        "\n",
+        "<h3 style=\"text-align: center;\"><b>Домашнее задание. Продвинутый поток. Весна 2021</b></h3>\n",
+        "\n",
+        "Это домашнее задание будет посвящено полноценному решению задачи машинного обучения."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zlB-owfaEEYs"
+      },
+      "source": [
+        "Есть две части этого домашнего задания: \n",
+        "* Сделать полноценный отчет о вашей работе: как вы обработали данные, какие модели попробовали и какие результаты получились (максимум 10 баллов). За каждую выполненную часть будет начислено определенное количество баллов.\n",
+        "* Лучшее решение отправить в соревнование на [kaggle](https://www.kaggle.com/c/advanced-dls-spring-2021/) (максимум 5 баллов). За прохождение определенного порогов будут начисляться баллы.\n",
+        "\n",
+        "\n",
+        "**Обе части будут проверяться в формате peer-review. Т.е. вашу посылку на степик будут проверять несколько других студентов и аггрегация их оценок будет выставлена. В то же время вам тоже нужно будет проверить несколько других учеников.**\n",
+        "\n",
+        "**Пожалуйста, делайте свою работу чистой и понятной, чтобы облегчить проверку. Если у вас будут проблемы с решением или хочется совета, то пишите в наш чат в телеграме или в лс @runfme. Если вы захотите проаппелировать оценку, то пипшите в лс @runfme.**\n",
+        "\n",
+        "**Во всех пунктах указания это минимальный набор вещей, которые стоит сделать. Если вы можете сделать какой-то шаг лучше или добавить что-то свое - дерзайте!**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Tu_JvqcBEN8Y"
+      },
+      "source": [
+        "# Как проверять?\n",
+        "\n",
+        "Ставьте полный балл, если выполнены все рекомендации или сделано что-то более интересное и сложное. За каждый отсустствующий пункт из рекомендация снижайте 1 балл."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ninJ63mJEEYt"
+      },
+      "source": [
+        "# Метрика\n",
+        "\n",
+        "Перед решением любой задачи важно понимать, как будет оцениваться ваше решение. В данном случае мы используем стандартную для задачи классификации метрику ROC-AUC. Ее можно вычислить используя только предсказанные вероятности и истинные классы без конкретного порога классификации + она раотает даже если классы в данных сильно несбалансированны (примеров одного класса в десятки раз больше примеров длугого). Именно поэтому она очень удобна для соревнований.\n",
+        "\n",
+        "Посчитать ее легко:\n"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -91,6 +148,19 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LOlxdURSEEY3"
+      },
+      "source": [
+        "## Загрузка данных (2 балла)\n",
+        "\n",
+        "1) Посмотрите на случайные строчки. \n",
+        "\n",
+        "2) Посмотрите, есть ли в датасете незаполненные значения (nan'ы) с помощью data.isna() или data.info() и, если нужно, замените их на что-то. Будет хорошо, если вы построите табличку с количеством nan в каждой колонке."
+      ]
     },
     {
       "cell_type": "code",
@@ -161,7 +231,15 @@
         "id": "dK370bPCEEZD"
       },
       "source": [
-        "## Анализ данных"
+        "## Анализ данных (3 балла)\n",
+        "\n",
+        "1) Для численных призанков постройте гистограмму (*plt.hist(...)*) или boxplot (*plt.boxplot(...)*). Для категориальных посчитайте количество каждого значения для каждого признака. Для каждой колонки надо сделать *data.value_counts()* и построить bar диаграммы *plt.bar(...)* или круговые диаграммы *plt.pie(...)* (хорошо, елси вы сможете это сделать на одном гарфике с помощью *plt.subplots(...)*). \n",
+        "\n",
+        "2) Посмотрите на распределение целевой переменной и скажите, являются ли классы несбалансированными.\n",
+        "\n",
+        "3) (Если будет желание) Поиграйте с разными библиотеками для визуализации - *sns*, *pandas_visual_analysis*, etc.\n",
+        "\n",
+        "Второй пункт очень важен, потому что существуют задачи классификации с несбалансированными классами. Например, это может значить, что в датасете намного больше примеров 0 класса. В таких случаях нужно 1) не использовать accuracy как метрику 2) использовать методы борьбы с imbalanced dataset (обычно если датасет сильно несбалансирован, т.е. класса 1 в 20 раз меньше класса 0)."
       ]
     },
     {
@@ -538,10 +616,39 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "zg60u3QDEEZH"
+      },
+      "source": [
+        "(Дополнительно) Если вы нашли какие-то ошибки в данных или выбросы, то можете их убрать. Тут можно поэксперементировать с обработкой данных как угодно, но не за баллы."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fwfksF1gEEZI"
+      },
+      "source": [
+        "# YOUR CODE"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "DviiJd8REEZK"
       },
       "source": [
-        "## Применение линейных моделей"
+        "## Применение линейных моделей (3 балла)\n",
+        "\n",
+        "1) Обработайте данные для того, чтобы к ним можно было применить LogisticRegression. Т.е. отнормируйте числовые признаки, а категориальные закодируйте с помощью one-hot-encoding'а. \n",
+        "\n",
+        "2) С помощью кроссвалидации или разделения на train/valid выборку протестируйте разные значения гиперпараметра C и выберите лучший (можно тестировать С=100, 10, 1, 0.1, 0.01, 0.001) по метрике ROC-AUC. \n",
+        "\n",
+        "Если вы разделяете на train/valid, то используйте LogisticRegressionCV. Он сам при вызове .fit() подберет параметр С. (не забудьте передать scroing='roc_auc', чтобы при кроссвалидации сравнивались значения этой метрики, и refit=True, чтобы при потом модель обучилась на всем датасете с лучшим параметром C). \n",
+        "\n",
+        "\n",
+        "(более сложный вариант) Если вы будете использовать кроссвалидацию, то преобразования данных и LogisticRegression нужно соединить в один Pipeline с помощью make_pipeline, как это делалось во втором семинаре. Потом pipeline надо передать в GridSearchCV. Для one-hot-encoding'a можно испльзовать комбинацию LabelEncoder + OneHotEncoder (сначала превращаем строчки в числа, а потом числа првращаем в one-hot вектора.)"
       ]
     },
     {
@@ -1134,10 +1241,38 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "uVahy6JKEEZQ"
+      },
+      "source": [
+        "Выпишите какое лучшее качество и с какими параметрами вам удалось получить"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "36729TOQEEZR"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "BlTeVy7fEEZR"
       },
       "source": [
-        "## Применение градиентного бустинга"
+        "## Применение градиентного бустинга (2 балла)\n",
+        "\n",
+        "Если вы хотите получить баллы за точный ответ, то стоит попробовать градиентный бустинг. Часто градиентный бустинг с дефолтными параметрами даст вам 80% результата за 0% усилий.\n",
+        "\n",
+        "Мы будем использовать catboost, поэтому нам не надо кодировать категориальные признаки. catboost сделает это сам (в .fit() надо передать cat_features=cat_cols). А численные признаки нормировать для моделей, основанных на деревьях не нужно.\n",
+        "\n",
+        "1) Разделите выборку на train/valid. Протестируйте catboost cо стандартными параметрами.\n",
+        "\n",
+        "2) Протестируйте разные занчения параметроа количества деревьев и learning_rate'а и выберите лучшую по метрике ROC-AUC комбинацию. \n",
+        "\n",
+        "(Дополнительно) Есть некоторые сложности с тем, чтобы использовать CatBoostClassifier вместе с GridSearchCV, поэтому мы не просим использовать кроссвалидацию. Но можете попробовать)"
       ]
     },
     {
@@ -1310,6 +1445,24 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "rf4Kjt96EEZU"
+      },
+      "source": [
+        "Выпишите какое лучшее качество и с какими параметрами вам удалось получить"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d2d9GolXEEZV"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "dDMXbvNZEEZV"
       },
       "source": [
@@ -1344,18 +1497,29 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Итоги работы:\n",
-        "\n",
-        "Применил линейную модель LogisticRegressionCV\n",
-        "\n",
-        "Применил градиентный бустинг catboost\n",
-        "\n",
-        "Модель получила оценку 0.857... в соревновании MIPT на платформе kaggle"
-      ],
       "metadata": {
-        "id": "3yu8DCtt8-Gb"
-      }
+        "id": "mkxjbGkVEEZc"
+      },
+      "source": [
+        "# Kaggle (5 баллов)\n",
+        "\n",
+        "Как выставить баллы:\n",
+        "\n",
+        "1) 1 >= roc auc > 0.84 это 5 баллов\n",
+        "\n",
+        "2) 0.84 >= roc auc > 0.7 это 3 балла\n",
+        "\n",
+        "3) 0.7 >= roc auc > 0.6 это 1 балл\n",
+        "\n",
+        "4) 0.6 >= roc auc это 0 баллов\n",
+        "\n",
+        "\n",
+        "Для выполнения задания необходимо выполнить следующие шаги.\n",
+        "* Зарегистрироваться на платформе [kaggle.com](kaggle.com). Процесс выставления оценок будет проходить при подведении итогового рейтинга. Пожалуйста, укажите во вкладке Team -> Team name свои имя и фамилию в формате Имя_Фамилия (важно, чтобы имя и фамилия совпадали с данными на Stepik).\n",
+        "* Обучить модель, получить файл с ответами в формате .csv и сдать его в конкурс. Пробуйте и экспериментируйте. Обратите внимание, что вы можете выполнять до 20 попыток сдачи на kaggle в день.\n",
+        "* После окончания соревнования отправить в итоговый ноутбук с решением на степик. \n",
+        "* После дедлайна проверьте посылки других участников по критериям. Для этого надо зайти на степик, скачать их ноутбук и проверить скор в соревновании."
+      ]
     }
   ]
 }
